# flightdeck

./: .gitignore  Dockerfile-all-in-one  LICENSE  README.md  TESTING.md  docker-compose.all-in-one.yml  docker-compose.yml
.github/workflows/: multi-agent-integration.yml  publish-images.yml  test.yml
api/chat-api/: Dockerfile  pom.xml  run.sh
architecture/: models.md
examples/helpdesk-router/: README.md  docker-compose.yml
examples/lead-followup-agent/: README.md  docker-compose.yml  system-prompt.txt  tools.json
examples/lead-followup-agent-confluent-cloud/: README.md  docker-compose.yml
examples/maintenance-ops-agent/: README.md  docker-compose.yml  system-prompt.txt  tools.json
examples/multi-agent-setup/: README.md  docker-compose.yml  integration-test.sh
examples/system-ops/: README.md  docker-compose.yml  seed.Dockerfile  tools.json  (+1 more)
frontend/: .env.example  Dockerfile  docker-entrypoint.sh  env.template.js  index.html  nginx.conf  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
infra/: docker-compose.yml
processing/: docker-compose.yml  pom.xml
prompts/: Dockerfile  README.md  docker-compose.yml  query.py  rag_server.py  requirements.txt  seed.py  tools.json
scripts/: start-all-in-one.sh
sdk/python/: README.md  example_app.py  example_think_app.py  pyproject.toml
sdk/python/flightdeck_sdk/: __init__.py  kafka_env_props.py  message_context.py  think_consumer_runner.py  tool_consumer_runner.py
sdk/python/tests/: test_message_context.py  test_think_consumer.py  test_tool_consumer_runner.py
think-consumer/: pom.xml
(+270 files in other folders)
