[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flightdeck-sdk"
version = "0.1.0"
description = "Flightdeck SDK — Kafka tool consumer framework for building agent tool executors"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "confluent-kafka>=2.3.0",
]

[project.optional-dependencies]
dev = [
    "build",
    "twine",
    "pytest",
]
